WIP footer section

--- a/Prog/FRONT-END Start/Lesson_8/site/index.html
+++ b/Prog/FRONT-END Start/Lesson_8/site/index.html
@@ -502,7 +502,7 @@
     <section class="client_s">
             <div class="client_s_section">
                 <div class="section_header">
-                    <h3 class="section_header__title">What we do</h3>
+                    <h3 class="section_header__title">Happy clients</h3>
                     <h4 class="section_header__about">some of our work</h4>
                     <hr class="section_header__line">
                 </div>
@@ -594,6 +594,202 @@
                 </div>
             </div>
     </section>
+    <section class="blog_s">
+        <div class="section_header">
+            <h3 class="section_header__title">Our stories</h3>
+            <h4 class="section_header__about">latest blog</h4>
+            <hr class="section_header__line">
+        </div>
+        <div class="flex_container space_between">
+            <div class="blog_s_block">
+                <div class="blog_s_block__img">
+                    <img src="img/blog.png" alt="girl writing" class="blog_s_block__img__main">
+                    <div class="blog_s_block__overlay flex_center">
+                        <div class="blog_s_block__overlay__center">
+                            <span>15</span>
+                            <p>Jan</p>
+                        </div>
+                    </div>
+                </div>
+                <h5 class="blog_s_block_title">
+                    Lorem ipsum dolor sit amet
+                </h5>
+                <p class="blog_s_block_desc">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Adipisci architecto asperiores eos obcaecati repellat!
+                </p>
+                <hr class="blog_s_block_line">
+                <div class="blog_s_block_info">
+                    <img src="img/blog_view.png" alt="views" class="blog_s_block_info__img">
+                    <span>542</span>
+                    <img src="img/blog_speech.png" alt="speech" class="blog_s_block_info__img">
+                    <span>17</span>
+                </div>
+            </div>
+            <div class="blog_s_block">
+                <div class="blog_s_block__img">
+                    <img src="img/blog.png" alt="girl writing" class="blog_s_block__img__main">
+                    <div class="blog_s_block__overlay flex_center">
+                        <div class="blog_s_block__overlay__center">
+                            <span>15</span>
+                            <p>Jan</p>
+                        </div>
+                    </div>
+                </div>
+                <h5 class="blog_s_block_title">
+                    Lorem ipsum dolor sit amet
+                </h5>
+                <p class="blog_s_block_desc">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Adipisci architecto asperiores eos obcaecati repellat!
+                </p>
+                <hr class="blog_s_block_line">
+                <div class="blog_s_block_info">
+                    <img src="img/blog_view.png" alt="views" class="blog_s_block_info__views">
+                    <span>542</span>
+                    <img src="img/blog_speech.png" alt="speech" class="blog_s_block_info__speech">
+                    <span>17</span>
+                </div>
+            </div>
+            <div class="blog_s_block">
+                <div class="blog_s_block__img">
+                    <img src="img/blog.png" alt="girl writing" class="blog_s_block__img__main">
+                    <div class="blog_s_block__overlay flex_center">
+                        <div class="blog_s_block__overlay__center">
+                            <span>15</span>
+                            <p>Jan</p>
+                        </div>
+                    </div>
+                </div>
+                <h5 class="blog_s_block_title">
+                    Lorem ipsum dolor sit amet
+                </h5>
+                <p class="blog_s_block_desc">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Adipisci architecto asperiores eos obcaecati repellat!
+                </p>
+                <hr class="blog_s_block_line">
+                <div class="blog_s_block_info">
+                    <img src="img/blog_view.png" alt="views" class="blog_s_block_info__views">
+                    <span>542</span>
+                    <img src="img/blog_speech.png" alt="speech" class="blog_s_block_info__speech">
+                    <span>17</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="map_s flex_center">
+        <div class="map_s__content">
+            <img src="img/map.png" alt="location icon">
+            <h4 class="map_s__content_title">open map</h4>
+            <hr class="section_header__line">
+        </div>
+    </section>
+    <footer>
+        <div class="flex_container space_between">
+            <div class="footer_s__mogo">
+                <p class="footer_s__mogo__logo">MoGo</p>
+                <p class="footer_s__mogo__text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Aliquam assumenda atque cumque eius enim eveniet,
+                    illum incidunt ipsam numquam placeat porro quaerat
+                    tenetur unde voluptatibus voluptatum. Dolorum fugit,
+                    magnam officia provident quibusdam quos sequi sunt!
+                    Quisquam.
+                </p>
+                <p class="footer_s__mogo__followers">
+                    <span>15k</span>
+                    followers
+                </p>
+                <hr class="blog_s_block_line">
+                <div class="footer_s__mogo__follow_us">
+                    <span>Follow us:</span>
+                    <img src="img/facebook-letter-logo.svg" alt="facebook_logo" class="footer_s__mogo__follow_us_img">
+                    <img src="img/twitter-logo-silhouette.svg" alt="twitter_logo" class="footer_s__mogo__follow_us_img">
+                    <img src="img/instagram-symbol.svg" alt="instagram_logo" class="footer_s__mogo__follow_us_img">
+                    <img src="img/pinterest-logo.svg" alt="pinterest_logo" class="footer_s__mogo__follow_us_img">
+                    <img src="img/google-plus-symbol.svg" alt="google_plus_logo" class="footer_s__mogo__follow_us_img">
+                    <img src="img/youtube.svg" alt="youtube_logo" class="footer_s__mogo__follow_us_img">
+                    <img src="img/tumblr-letter-logo.svg" alt="tumblr_logo" class="footer_s__mogo__follow_us_img">
+                </div>
+                <div class="footer_s__mogo__subscribe">
+                    <input type="email" class="footer_s__mogo__subscribe__mail" placeholder="Your Email..." size="40">
+                    <button class="my_btn my_btn--filled footer_s__mogo__subscribe__button">Subscribe</button>
+                </div>
+            </div>
+            <div class="footer_s__blogs">
+                <p class="footer_s__blogs__title">blogs</p>
+                <div class="footer_s__blogs_post">
+                    <div class="footer_s__blogs_post_image">
+                        <img src="img/footer_blog.png" alt="post_image" class="footer_s__blogs_post_img">
+                    </div>
+                    <div class="footer_s__blogs_post_info">
+                        <h5 class="footer_s__blogs_post_info_title">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                        </h5>
+                        <p class="footer_s__blogs_post_info_date">
+                            Jan 9, 2016
+                        </p>
+                    </div>
+                    <div class="footer_s__blogs_post_info">
+                        <h5 class="footer_s__blogs_post_info_title">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                        </h5>
+                        <p class="footer_s__blogs_post_info_date">
+                            Jan 9, 2016
+                        </p>
+                    </div>
+                    <div class="footer_s__blogs_post_info">
+                        <h5 class="footer_s__blogs_post_info_title">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                        </h5>
+                        <p class="footer_s__blogs_post_info_date">
+                            Jan 9, 2016
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_s__instagram">
+                <p class="footer_s__instagram__title">instagram</p>
+                <div class="footer_s__instagram__photos">
+                    <div class="footer_s__instagram__photos_img">
+                        <img src="img/footer_instgrm.png" alt="instagram_photo" class="footer_s__instagram__photos_img_picture">
+                    </div>
+                    <div class="footer_s__instagram__photos_img">
+                        <img src="img/footer_instgrm.png" alt="instagram_photo" class="footer_s__instagram__photos_img_picture">
+                    </div>
+                    <div class="footer_s__instagram__photos_img">
+                        <img src="img/footer_instgrm.png" alt="instagram_photo" class="footer_s__instagram__photos_img_picture">
+                    </div>
+                    <div class="footer_s__instagram__photos_img">
+                        <img src="img/footer_instgrm.png" alt="instagram_photo" class="footer_s__instagram__photos_img_picture">
+                    </div>
+                    <div class="footer_s__instagram__photos_img">
+                        <img src="img/footer_instgrm.png" alt="instagram_photo" class="footer_s__instagram__photos_img_picture">
+                    </div>
+                    <div class="footer_s__instagram__photos_img">
+                        <img src="img/footer_instgrm.png" alt="instagram_photo" class="footer_s__instagram__photos_img_picture">
+                    </div>
+                    <div class="footer_s__instagram__photos_img">
+                        <img src="img/footer_instgrm.png" alt="instagram_photo" class="footer_s__instagram__photos_img_picture">
+                    </div>
+                    <div class="footer_s__instagram__photos_img">
+                        <img src="img/footer_instgrm.png" alt="instagram_photo" class="footer_s__instagram__photos_img_picture">
+                    </div>
+                    <div class="footer_s__instagram__photos_img">
+                        <img src="img/footer_instgrm.png" alt="instagram_photo" class="footer_s__instagram__photos_img_picture">
+                    </div>
+                </div>
+                <p class="footer_s__instagram__view_more">View more photos</p>
+            </div>
+        </div>
+        <div class="container">
+            <hr class="blog_s_block_line">
+            <p class="footer_s__rights">
+                &copy; 2017 MoGo HTML template by <span>Shura</span>
+            </p>
+        </div>
+    </footer>
 
     <br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
