block blog in footer section WIP

--- a/Prog/FRONT-END Start/Lesson_8/site/index.html
+++ b/Prog/FRONT-END Start/Lesson_8/site/index.html
@@ -731,6 +731,11 @@
                             Jan 9, 2016
                         </p>
                     </div>
+                </div>
+                <div class="footer_s__blogs_post">
+                    <div class="footer_s__blogs_post_image">
+                        <img src="img/footer_blog.png" alt="post_image" class="footer_s__blogs_post_img">
+                    </div>
                     <div class="footer_s__blogs_post_info">
                         <h5 class="footer_s__blogs_post_info_title">
                             Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -738,6 +743,11 @@
                         <p class="footer_s__blogs_post_info_date">
                             Jan 9, 2016
                         </p>
+                    </div>
+                </div>
+                <div class="footer_s__blogs_post">
+                    <div class="footer_s__blogs_post_image">
+                        <img src="img/footer_blog.png" alt="post_image" class="footer_s__blogs_post_img">
                     </div>
                     <div class="footer_s__blogs_post_info">
                         <h5 class="footer_s__blogs_post_info_title">
