finished main work

--- a/Prog/FRONT-END Start/Lesson_8/site/index.html
+++ b/Prog/FRONT-END Start/Lesson_8/site/index.html
@@ -718,7 +718,7 @@
                 </div>
             </div>
             <div class="footer_s__blogs">
-                <p class="footer_s__blogs__title">blogs</p>
+                <p class="footer_s__block__title">blogs</p>
                 <div class="footer_s__blogs_post">
                     <div class="footer_s__blogs_post_image">
                         <img src="img/footer_blog.png" alt="post_image" class="footer_s__blogs_post_img">
@@ -760,7 +760,7 @@
                 </div>
             </div>
             <div class="footer_s__instagram">
-                <p class="footer_s__instagram__title">instagram</p>
+                <p class="footer_s__block__title">instagram</p>
                 <div class="footer_s__instagram__photos">
                     <div class="footer_s__instagram__photos_img">
                         <img src="img/footer_instgrm.png" alt="instagram_photo" class="footer_s__instagram__photos_img_picture">
@@ -794,7 +794,7 @@
             </div>
         </div>
         <div class="container">
-            <hr class="blog_s_block_line">
+            <hr class="footer__line">
             <p class="footer_s__rights">
                 &copy; 2017 MoGo HTML template by <span>Shura</span>
             </p>
