--- a/Prog/frontend_pro/lesson_2/index.html
+++ b/Prog/frontend_pro/lesson_2/index.html
@@ -137,8 +137,8 @@
 					[1, 2, 3],
 					[4, 5, 6],
 					[7, 8, 9]
-				];
-				console.log(arr);
+				], randomNumbers;
+				// console.log(arr);
 
 				// for (var i =0; i < arr.length; i++) {
 				// 	for (var j = 0; j < arr[i].length; j++) {
@@ -146,6 +146,12 @@
 				// 	}
 				// 	document.write('<br>');
 				// }
+
+				for (var i = 0; i < 10; i++) {
+					var random = Math.round( Math.random() * 100 );
+					randomNumbers.push(random);
+				}
+				console.log(randomNumbers);
 
 
 
