--- a/JSBook/iRock2_0.html
+++ b/JSBook/iRock2_0.html
@@ -13,25 +13,19 @@
 			alert ("Hello, " + userName + ".");
 			document.getElementById("rockImg").src="images/smile.png";
 		}
-		setTimeout ('document.getElementById ("rockImg"). src="images/lonely.png"', 300000);
+		setTimeout ('document.getElementById ("rockImg").src="images/lonely.png"', 30000);
 	}
 	function resizeRock () {
-		var rockSize = (document.body.clientHeight - 100) * 0.9;
-		document.getElementById ("rockImg").style.height = rockSize + "px";
-	}
-	function onResize () {
-		var w = document.body.clientWidth;
-		var h = document.body.clientHeight;
-		var txt = "Width: " + w + "<br/> Height: " + h ;
-		document.getElementById("text").innerHTML = txt;
+		var rockSize = (document.body.clientWidth - 100) * 0.9;
+		document.getElementById ("rockImg").style.width = rockSize + "px";
 	}
 	
    </script>
 </head>
-<body  onload="resizeRock (); greetUser ();" onresize="onResize ()">
+<body  onload="resizeRock(); greetUser();" onresize="resizeRock()">
 	<p id="text"></p>
 	<div style="margin-top:100px; text-align:center">
-	  <img id="rockImg" src="images\rock.png" alt="iRock" style="cursor:pointer" 
+	  <img id="rockImg" src="images/rock.png" alt="iRock" style="cursor:pointer"
 	  onclick="touchRock();"/>
 	</div>
 </body>
