frontend pro lesson 3 homework in progress part 1

--- a/MySite/Authorization/signin.html
+++ b/MySite/Authorization/signin.html
@@ -24,6 +24,12 @@
             </ul>
         </form>
     </div>
+<div class="container">
+    <a href="http://pso.dev.tracktica.gedzyk.com/tracker/creative_c?ad_id=2904&campaign_id=1575&publisher_id=841" style="cursor: pointer;">
+        <img src="http://pso.dev.tracktica.gedzyk.com/tracker/creative_v?ad_id=2904&campaign_id=1575&publisher_id=841" alt="">
+    </a>
+</div>
+
 </body>
 
 </html>
