--- a/Prog/frontend_pro/lesson_3/index.html
+++ b/Prog/frontend_pro/lesson_3/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <script src="js/objects.js"></script>
+    <link rel="stylesheet" href="css/zoo.css">
+    <script src="js/homework_1.js"></script>
 </head>
 
 <body>
