--- a/Prog/frontend_pro/lesson_3/index.html
+++ b/Prog/frontend_pro/lesson_3/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/zoo.css">
-    <script src="js/homework_1.js"></script>
+    <script src="js/functions_home.js"></script>
 </head>
 
 <body>
