frontend pro lesson 4 homework started

--- a/MySite/Authorization/signin.html
+++ b/MySite/Authorization/signin.html
@@ -25,9 +25,11 @@
         </form>
     </div>
 <div class="container">
-    <a href="http://pso.dev.tracktica.gedzyk.com/tracker/creative_c?ad_id=2904&campaign_id=1575&publisher_id=841" style="cursor: pointer;">
-        <img src="http://pso.dev.tracktica.gedzyk.com/tracker/creative_v?ad_id=2904&campaign_id=1575&publisher_id=841" alt="">
+    <a href="http://a31.sevmob.com/tracker/creative_c?ad_id=4542&campaign_id=2834&publisher_id=467" style="cursor: pointer;">
+        <img src="http://bem.sevmob.com/tracker/creative_v?ad_id=4542&campaign_id=2834&publisher_id=467" alt="">
     </a>
+    <!--<script language="javascript">var _divId = Math.random().toString(36).substring(7);document.write('<scr'+'ipt language="javascript" src="//bem.dev.tracktica.gedzyk.com/tracker/514/delivery/'+_divId+'?sub1=_ADSUB1_&sub2=_ADSUB2_&sub3=_ADSUB3_&sub4=_ADSUB4_"></scr'+'ipt><div id="'+_divId+'"></div>');</script>-->
+
 </div>
 
 </body>
