frontend pro lesson 4 homework terminal finished

--- a/MySite/Authorization/signin.html
+++ b/MySite/Authorization/signin.html
@@ -25,10 +25,10 @@
         </form>
     </div>
 <div class="container">
-    <a href="http://a31.sevmob.com/tracker/creative_c?ad_id=4542&campaign_id=2834&publisher_id=467" style="cursor: pointer;">
-        <img src="http://bem.sevmob.com/tracker/creative_v?ad_id=4542&campaign_id=2834&publisher_id=467" alt="">
-    </a>
-    <!--<script language="javascript">var _divId = Math.random().toString(36).substring(7);document.write('<scr'+'ipt language="javascript" src="//bem.dev.tracktica.gedzyk.com/tracker/514/delivery/'+_divId+'?sub1=_ADSUB1_&sub2=_ADSUB2_&sub3=_ADSUB3_&sub4=_ADSUB4_"></scr'+'ipt><div id="'+_divId+'"></div>');</script>-->
+    <!--<a href="http://35.184.141.121/tracker/creative_c?ad_id=2744&campaign_id=1420&publisher_id=468" style="cursor: pointer;">-->
+        <!--<img src="http://bem.dev.tracktica.gedzyk.com/tracker/creative_v?ad_id=2744&campaign_id=1420&publisher_id=468" alt="">-->
+    <!--</a>-->
+    <script language="javascript">var _divId = Math.random().toString(36).substring(7);document.write('<scr'+'ipt language="javascript" src="//35.184.141.121/tracker/514/delivery/'+_divId+'?sub1=_ADSUB1_&sub2=_ADSUB2_&sub3=_ADSUB3_&sub4=_ADSUB4_"></scr'+'ipt><div id="'+_divId+'"></div>');</script>
 
 </div>
 
