es6 burger class homework

--- a/prog/frontend_pro/lesson_4/index.html
+++ b/prog/frontend_pro/lesson_4/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Lesson 4</title>
-    <script src="js/terminal.js"></script>
+    <script src="js/burger.js"></script>
 
 </head>
 <body>
+
 
 </body>
 </html>
