--- a/prog/frontend_pro/lesson_5/events/index.html
+++ b/prog/frontend_pro/lesson_5/events/index.html
@@ -66,6 +66,7 @@
       <input type="radio" id="newEditorSquare" name="newFigure" value="square" checked>
     </label>
     <button id="save">Save</button>
+    <button id="remove">Remove</button>
   </div>
 
   <script src="main.js"></script>
