angular routing app (from scotch video lessons)

--- a/angular_test/index.html
+++ b/angular_test/index.html
@@ -24,10 +24,11 @@
             console.error(err);
         });
     </script>
+    <base href="/">
 </head>
 <body class="container">
 
-<my-app></my-app>
+<app></app>
 
 
 </body>
