--- a/symfony-angular/web/src/index.html
+++ b/symfony-angular/web/src/index.html
@@ -9,6 +9,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<calendar>Loading...</calendar>
+<app-calendar>Loading...</app-calendar>
 </body>
 </html>
